fix overflow to cart Title

--- a/components/CamperCard/CamperCard.module.css
+++ b/components/CamperCard/CamperCard.module.css
@@ -34,6 +34,10 @@
     font-size: 24px;
     line-height: 1.33333;
     margin-bottom: 8px;
+    display: -webkit-box;
+    -webkit-box-orient: vertical;
+    -webkit-line-clamp: 1;
+    overflow: hidden;
 }
 
 .price {
